RESOLVED FIXED32364
[Chromium] SporeViewer demo doesn't work in Chromium
https://bugs.webkit.org/show_bug.cgi?id=32364
Summary [Chromium] SporeViewer demo doesn't work in Chromium
Kenneth Russell
Reported 2009-12-10 00:38:10 PST
Mozilla's SporeViewer WebGL demo doesn't work in Chromium. There are a few bugs in the custom V8 bindings for WebGLRenderingContext causing JavaScript exceptions to be raised.
Attachments
Patch (7.10 KB, patch)
2009-12-10 01:08 PST, Kenneth Russell
no flags
Kenneth Russell
Comment 1 2009-12-10 01:08:31 PST
Oliver Hunt
Comment 2 2009-12-10 01:11:42 PST
Comment on attachment 44599 [details] Patch r=me
WebKit Commit Bot
Comment 3 2009-12-10 01:21:08 PST
Comment on attachment 44599 [details] Patch Clearing flags on attachment: 44599 Committed r51943: <http://trac.webkit.org/changeset/51943>
WebKit Commit Bot
Comment 4 2009-12-10 01:21:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.