2009-12-10  Kenneth Russell  <kbr@google.com>

Reviewed by Oliver Hunt.

        [Chromium] SporeViewer demo doesn't work in Chromium
        https://bugs.webkit.org/show_bug.cgi?id=32364

        Test: fast/canvas/webgl/bug-32364.html

        * fast/canvas/webgl/bug-32364-expected.txt: Added.
        * fast/canvas/webgl/bug-32364.html: Added.
2009-12-10  Kenneth Russell  <kbr@google.com>

        Reviewed by Oliver Hunt.

        [Chromium] SporeViewer demo doesn't work in Chromium
        https://bugs.webkit.org/show_bug.cgi?id=32364

        Test: fast/canvas/webgl/bug-32364.html

        * bindings/v8/custom/V8WebGLRenderingContextCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL):
        (WebCore::vertexAttribAndUniformHelperf):
        (WebCore::uniformHelperi):

Canonical link: https://commits.webkit.org/43368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51943 268f45cc-cd09-0410-ab3c-d52691b4dbfc